--- a/Notes/Linear Regression/synthetic dataset.ipynb
+++ b/Notes/Linear Regression/synthetic dataset.ipynb
@@ -49,14 +49,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "898b43d6-18f8-402b-b82c-7a12ea388af6",
    "metadata": {},
    "outputs": [],
    "source": [
     "import mglearn\n",
-    "X,y = mglearn.datasets"
+    "X,y = mglearn.datasets.make_wave(n_samples=60)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a8d325b6-b6ae-401c-b520-00fc62c41b88",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(60, 1)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "73173a80-248d-4fc2-9cca-e9f98f3cf096",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.75275929],\n",
+       "       [ 2.70428584],\n",
+       "       [ 1.39196365],\n",
+       "       [ 0.59195091],\n",
+       "       [-2.06388816],\n",
+       "       [-2.06403288],\n",
+       "       [-2.65149833],\n",
+       "       [ 2.19705687],\n",
+       "       [ 0.60669007],\n",
+       "       [ 1.24843547],\n",
+       "       [-2.87649303],\n",
+       "       [ 2.81945911],\n",
+       "       [ 1.99465584],\n",
+       "       [-1.72596534],\n",
+       "       [-1.9090502 ],\n",
+       "       [-1.89957294],\n",
+       "       [-1.17454654],\n",
+       "       [ 0.14853859],\n",
+       "       [-0.40832989],\n",
+       "       [-1.25262516],\n",
+       "       [ 0.67111737],\n",
+       "       [-2.16303684],\n",
+       "       [-1.24713211],\n",
+       "       [-0.80182894],\n",
+       "       [-0.26358009],\n",
+       "       [ 1.71105577],\n",
+       "       [-1.80195731],\n",
+       "       [ 0.08540663],\n",
+       "       [ 0.55448741],\n",
+       "       [-2.72129752],\n",
+       "       [ 0.64526911],\n",
+       "       [-1.97685526],\n",
+       "       [-2.60969044],\n",
+       "       [ 2.69331322],\n",
+       "       [ 2.7937922 ],\n",
+       "       [ 1.85038409],\n",
+       "       [-1.17231738],\n",
+       "       [-2.41396732],\n",
+       "       [ 1.10539816],\n",
+       "       [-0.35908504],\n",
+       "       [-2.26777059],\n",
+       "       [-0.02893854],\n",
+       "       [-2.79366887],\n",
+       "       [ 2.45592241],\n",
+       "       [-1.44732011],\n",
+       "       [ 0.97513371],\n",
+       "       [-1.12973354],\n",
+       "       [ 0.12040813],\n",
+       "       [ 0.28026168],\n",
+       "       [-1.89087327],\n",
+       "       [ 2.81750777],\n",
+       "       [ 1.65079694],\n",
+       "       [ 2.63699365],\n",
+       "       [ 2.3689641 ],\n",
+       "       [ 0.58739987],\n",
+       "       [ 2.53124541],\n",
+       "       [-2.46904499],\n",
+       "       [-1.82410283],\n",
+       "       [-2.72863627],\n",
+       "       [-1.04801802]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e05ce224-0709-4b4f-85fc-abd8baca380c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(60,)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5109b4b-ef66-43f3-a477-8de92e0d21c7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
