--- a/Notes/Linear Regression/synthetic dataset.ipynb
+++ b/Notes/Linear Regression/synthetic dataset.ipynb
@@ -247,14 +247,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "46d44299-7fe5-4239-aece-52d3560e45c2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(15, 1)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "X_train,X_test,y_train,y_test = train_test_split(X,y,random_state=42)\n",
     "X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05a11787-a026-46a4-affc-255c4f576c84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fitting\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "lr = LinearRegression().fit(X_train,y_train)"
    ]
   }
  ],
