--- a/Notes/Linear Regression/synthetic dataset.ipynb
+++ b/Notes/Linear Regression/synthetic dataset.ipynb
@@ -270,15 +270,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "05a11787-a026-46a4-affc-255c4f576c84",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#fitting\n",
+    "#fitting linear regression model\n",
     "from sklearn.linear_model import LinearRegression\n",
     "lr = LinearRegression().fit(X_train,y_train)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfa0d250-557b-440d-84bd-c5a83c232ce1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
